updated the dockerignore and gitignore, added dockerfile
Signed-off-by: Fortune Ikechi <ikechifortune@gmail.com>

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "services/*"
   ],
   "scripts": {
-    "start": "npm run build --prefix ./services/devotion && platformatic start",
+    "start": "platformatic start",
     "dev": "vite",
     "build": "vite build",
     "type": "module"
